# ArwodMNE

./: .gitignore  .gitmodules  INTEGRATION_SUMMARY.md  full_build_log.txt  run_tests.py  test_report.md  test_tfr_enhanced.cpp
src/examples/ex_algorithms_integration/: CMakeLists.txt  main.cpp
src/libraries/dataio/: CMakeLists.txt  data_converter.cpp  data_converter.h  dataio_global.cpp  dataio_global.h  multiformat_reader.cpp  multiformat_reader.h
src/libraries/decoding/: CMakeLists.txt  csp.cpp  csp.h  decoding_global.cpp  decoding_global.h  spatial_filtering.cpp  spatial_filtering.h  temporal_decoding.cpp  temporal_decoding.h  test_decoding_basic.cpp
src/libraries/preprocessing/: CMakeLists.txt  artifact_detection.cpp  artifact_detection.h  ecg_eog_processing.cpp  ecg_eog_processing.h  fastica.cpp  fastica.h  ica.cpp  ica.h  infomax.cpp  infomax.h  maxwell_filter.cpp  maxwell_filter.h  pca.cpp  pca.h  picard.cpp  picard.h  preprocessing_global.cpp  preprocessing_global.h
src/libraries/simulation/: CMakeLists.txt  data_simulation.cpp  data_simulation.h  noise_simulation.cpp  noise_simulation.h  simulation_global.cpp  simulation_global.h
src/libraries/stats/: CMakeLists.txt  clusterpermutation.cpp  clusterpermutation.h  correction.cpp  correction.h  statistics.cpp  statistics.h  stats_global.cpp  stats_global.h  ttest.cpp  ttest.h
src/libraries/tfr/: CMakeLists.txt  csd.cpp  csd.h  psd.cpp  psd.h  tfr_compute.cpp  tfr_compute.h  tfr_global.cpp  tfr_global.h  tfr_utils.cpp  tfr_utils.h  timefrequency.cpp  timefrequency.h
src/testframes/: CMakeLists.txt
src/testframes/channels/: CMakeLists.txt
src/testframes/channels/test_channel_management/: test_channel_management.cpp
src/testframes/channels/test_montage_distance_preservation/: CMakeLists.txt
src/testframes/connectivity/: CMakeLists.txt
src/testframes/connectivity/test_granger_causality/: CMakeLists.txt  test_granger_causality.cpp
src/testframes/decoding/: CMakeLists.txt
src/testframes/decoding/test_csp_properties/: CMakeLists.txt  test_csp_properties.cpp
src/testframes/decoding/test_decoding/: CMakeLists.txt  test_decoding.cpp
src/testframes/fiff/: CMakeLists.txt
src/testframes/fiff/test_edf2fiff_rwr/: CMakeLists.txt
src/testframes/fwd/: CMakeLists.txt
src/testframes/fwd/test_forward_solution_linearity/: test_forward_solution_linearity.cpp
src/testframes/inverse/: CMakeLists.txt
src/testframes/inverse/test_beamformer_consistency/: test_beamformer_consistency.cpp
src/testframes/inverse/test_inverse_linearity/: CMakeLists.txt
src/testframes/inverse/test_inverse_operator/: CMakeLists.txt  test_inverse_operator.cpp
src/testframes/inverse/test_lcmv_constraint/: CMakeLists.txt
src/testframes/inverse/test_lcmv_cov/: CMakeLists.txt  test_lcmv_cov.cpp
src/testframes/inverse/test_mixed_norm/: CMakeLists.txt  test_mixed_norm.cpp
src/testframes/inverse/test_resolution_analysis/: CMakeLists.txt  test_resolution_analysis.cpp
src/testframes/mne/: CMakeLists.txt
src/testframes/preprocessing/: CMakeLists.txt
src/testframes/rtprocessing/: CMakeLists.txt
src/testframes/simulation/: CMakeLists.txt
src/testframes/stats/: CMakeLists.txt
src/testframes/stats/test_stats/: CMakeLists.txt
src/testframes/test_artifact_detection/: CMakeLists.txt
src/testframes/test_beamformer_consistency/: CMakeLists.txt
src/testframes/test_channel_management/: CMakeLists.txt
src/testframes/test_connectivity/: CMakeLists.txt  test_connectivity.cpp
src/testframes/test_correction_properties/: CMakeLists.txt
src/testframes/test_csd_hermitian/: test_csd_hermitian.cpp
src/testframes/test_data_compatibility/: CMakeLists.txt
src/testframes/test_data_io_roundtrip/: CMakeLists.txt  test_data_io_roundtrip.cpp
src/testframes/test_data_roundtrip/: CMakeLists.txt
src/testframes/test_decoding/: test_decoding.cpp
src/testframes/test_dics/: CMakeLists.txt  test_dics.cpp
src/testframes/test_ecg_eog_processing/: CMakeLists.txt  test_ecg_eog_processing.cpp
src/testframes/test_fir_linear_phase/: CMakeLists.txt  test_fir_linear_phase.cpp
src/testframes/test_forward_solution_linearity/: CMakeLists.txt
src/testframes/test_forward_solution_processing/: CMakeLists.txt  test_forward_solution_processing.cpp
src/testframes/test_granger_causality/: CMakeLists.txt
src/testframes/test_ica_invertibility/: test_ica_invertibility.cpp
src/testframes/test_inverse_linearity/: CMakeLists.txt  test_inverse_linearity.cpp
src/testframes/test_inverse_operator/: CMakeLists.txt
src/testframes/test_lcmv_constraint/: test_lcmv_constraint.cpp
src/testframes/test_maxwell_orthogonality/: test_maxwell_orthogonality.cpp
src/testframes/test_montage_distance_preservation/: CMakeLists.txt  test_montage_distance_preservation.cpp
src/testframes/test_morphing/: CMakeLists.txt  test_morphing.cpp
src/testframes/test_noise_addition/: CMakeLists.txt  test_noise_addition.cpp
src/testframes/test_parametric_tests/: CMakeLists.txt
src/testframes/test_permutation_properties/: CMakeLists.txt  test_permutation_properties.cpp
src/testframes/test_psd_nonnegativity/: test_psd_nonnegativity.cpp
src/testframes/test_rap_music/: CMakeLists.txt  test_rap_music.cpp
src/testframes/test_resolution_analysis/: CMakeLists.txt
src/testframes/test_rt_pipeline_integration/: CMakeLists.txt  test_rt_pipeline_integration.cpp
src/testframes/test_simulation_statistical_consistency/: CMakeLists.txt  test_simulation_statistical_consistency.cpp
src/testframes/test_source_psd/: CMakeLists.txt
src/testframes/test_sparse_reconstruction/: CMakeLists.txt  test_sparse_reconstruction.cpp
src/testframes/test_sparse_reconstruction_gamma_map/: CMakeLists.txt
src/testframes/test_stats/: test_stats.cpp
src/testframes/test_tfr_energy_conservation/: test_tfr_energy_conservation.cpp
src/testframes/test_tfr_multitaper/: CMakeLists.txt
src/testframes/test_tfr_stockwell/: test_tfr_stockwell.cpp
src/testframes/test_verification/: CMakeLists.txt  test_verification.cpp
src/testframes/tfr/: CMakeLists.txt
src/testframes/utils/: CMakeLists.txt
(+201 files in other folders)
