add_subdirectory(test_inverse_linearity)
add_subdirectory(test_inverse_operator)
add_subdirectory(test_dipole_fit)
add_subdirectory(test_mixed_norm)
add_subdirectory(test_rap_music)
add_subdirectory(test_resolution_analysis)
add_subdirectory(test_sparse_reconstruction)
add_subdirectory(test_sparse_reconstruction_gamma_map)
add_subdirectory(test_lcmv_constraint)
add_subdirectory(test_lcmv_cov)
add_subdirectory(test_beamformer_consistency)
add_subdirectory(test_dics)
