#=============================================================================================================
#
# @file     CMakeLists.txt
# @author   Kiro AI Assistant
# @since    0.1.0
# @date     January, 2025
#
# @section  LICENSE
#
# Copyright (C) 2025, MNE-CPP authors. All rights reserved.
#
# @brief    CMake configuration for RAP-MUSIC unit tests
#
#=============================================================================================================

cmake_minimum_required(VERSION 3.14)
project(test_rap_music LANGUAGES CXX)

#=============================================================================================================
# QT COMPONENTS
#=============================================================================================================

find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Core Test)
find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Core Test)

#=============================================================================================================
# SOURCES
#=============================================================================================================

set(SOURCES
    test_rap_music.cpp
)

#=============================================================================================================
# TARGET
#=============================================================================================================

add_executable(${PROJECT_NAME} ${SOURCES})

#=============================================================================================================
# PROPERTIES
#=============================================================================================================

set_target_properties(${PROJECT_NAME} PROPERTIES
    CXX_STANDARD 17
    CXX_STANDARD_REQUIRED ON
    AUTOMOC ON
)

#=============================================================================================================
# INCLUDE DIRECTORIES
#=============================================================================================================

target_include_directories(${PROJECT_NAME} PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${CMAKE_SOURCE_DIR}/libraries
)

#=============================================================================================================
# LINK LIBRARIES
#=============================================================================================================

target_link_libraries(${PROJECT_NAME} PRIVATE
    Qt${QT_VERSION_MAJOR}::Core
    Qt${QT_VERSION_MAJOR}::Test
    eigen
    mne_inverse
    mne_mne
    mne_fiff
    mne_utils
)

#=============================================================================================================
# INSTALL
#=============================================================================================================

if(NOT BUILD_SHARED_LIBS)
    target_compile_definitions(${PROJECT_NAME} PRIVATE STATICBUILD)
endif()
