#==============================================================================================================
#
# @file     CMakeLists.txt
# @author   Kiro AI Assistant
# @since    0.1.0
# @date     January, 2025
#
# @section  LICENSE
#
# Copyright (C) 2025, MNE-CPP authors. All rights reserved.
#
# @brief    CMake configuration for CSD Hermitian property tests
#
#==============================================================================================================

cmake_minimum_required(VERSION 3.14)
project(test_csd_hermitian LANGUAGES CXX)

#=============================================================================================================
# QT COMPONENTS
#=============================================================================================================

find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Core Test)
find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Core Test)

# Enable Qt MOC
set(CMAKE_AUTOMOC ON)

#=============================================================================================================
# SOURCES
#=============================================================================================================

set(SOURCES
    test_csd_hermitian.cpp
)

#=============================================================================================================
# TARGET
#=============================================================================================================

add_executable(${PROJECT_NAME} ${SOURCES})

#=============================================================================================================
# LIBRARIES
#=============================================================================================================

target_link_libraries(${PROJECT_NAME} PRIVATE
    Qt${QT_VERSION_MAJOR}::Core
    Qt${QT_VERSION_MAJOR}::Test
    eigen
    mne_tfr
    mne_utils
)

#=============================================================================================================
# TESTS
#=============================================================================================================

add_test(NAME ${PROJECT_NAME} COMMAND ${PROJECT_NAME})

#=============================================================================================================
# INSTALL
#=============================================================================================================

if(NOT MNE_ORGANIZE_TESTS_IN_FOLDERS)
    install(TARGETS ${PROJECT_NAME}
        RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
    )
endif()
